--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8"> </meta>
 	<meta name="viewport" content="width=device-width, user-scalable=no, intial-scale=1.0"></meta>
 	<meta http-equiv="X-UA-compatible" content="ie=edge"></meta>
-	<title>ReactJs basics</title>
+ 	<title>ReactJs basics</title>
 </head>
 
 <body>
+	<div id="app"></div>
 <script type="text/javascript" src="/app/bundle.js"></script>
 </body>
 </html>
